# gol-bitwise

./: .gitignore  Cargo.toml
benches/: large_grid.rs  main.rs
src/: lib.rs  main.rs  region.rs  rle.rs  tile.rs
