[package]
name = "gol-bitwise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[[bench]]
name = "large_grid"
harness = false

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = [
	"cargo_bench_support",
] }
